# embucket-labs

./: .env.example  .env_e2e  .gitignore  .pre-commit-config.yaml  .vale.ini  CODING_CONVENTIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  DockerfileCombined  ERROR_HANDLING.md  Makefile  README.md  check_license.sh  diesel.toml  docker-compose.yml  entrypoint.sh  metastore.yaml_example  rustc-ice-2025-06-10T10_29_44-20791.txt  ui_openapi.json  update_readme.py
crates/api-client-rest/: Cargo.toml
crates/api-client-rest/src/: api.rs  lib.rs
crates/api-client-rest/src/requests/: auth.rs  auth_helpers.rs  client.rs  error.rs  helpers.rs  http.rs  mod.rs  query.rs  requests.rs
crates/api-iceberg-rest/: Cargo.toml
crates/api-iceberg-rest/src/: auth.rs  error.rs  handlers.rs  lib.rs  router.rs  schemas.rs  state.rs
crates/api-iceberg-rest/src/tests/: handlers_errors.rs  mod.rs
crates/api-seed/: Cargo.toml
crates/api-seed/src/: api.rs  error.rs  lib.rs  models.rs  static_assets.rs  tests.rs
crates/api-seed/src/requests/: query.rs
crates/api-seed/src/seed/: fake_provider.rs  mod.rs  models.rs  rng.rs  static_assets.rs  tests.rs
crates/api-seed/src/seed/models/: column.rs  database.rs  mod.rs  schema.rs  table.rs  volume.rs
crates/api-seed/templates/: gen.yaml  minimal_seed.yaml  seed.yaml  seed_root.yaml  super.yaml  typical_seed.yaml  volumes.yaml
crates/api-sessions/: Cargo.toml
crates/api-sessions/src/: session.rs
crates/api-snowflake-rest/: Cargo.toml
crates/api-snowflake-rest/src/: auth.rs  error.rs  handlers.rs  layer.rs  lib.rs  models.rs  router.rs  schemas.rs  sql_state.rs  state.rs  test_server.rs
crates/api-snowflake-rest/src/server/: auth.rs  error.rs  handlers.rs  helpers.rs  mod.rs  router.rs  test_server.rs
crates/api-snowflake-rest/src/tests/: client.rs  external_server.rs  mod.rs  snow_sql.rs  sql_macro.rs  test_abort_by_request_id.rs  test_generic_sqls.rs  test_gzip_encoding.rs  test_requests_abort.rs  test_rest_quick_sqls.rs  test_sqls.rs  test_sqls_arrow_data_format.rs
crates/api-structs/: Cargo.toml
crates/api-structs/src/: auth.rs  column_info.rs  databases.rs  derive_features.rs  lib.rs  query.rs  query_context.rs  result_set.rs  schemas.rs  tables.rs  volumes.rs
crates/benchmarks/: Cargo.toml  bench.sh
crates/benchmarks/queries/tpch/: q18.sql
crates/benchmarks/src/: lib.rs
crates/benchmarks/src/clickbench/: clickbench.rs  mod.rs  run.rs
crates/benchmarks/src/tpch/: convert.rs  mod.rs  run.rs  run_df.rs
crates/benchmarks/src/util/: mod.rs  options.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: error.rs  history.rs  lib.rs  service.rs  utils.rs
crates/control_plane/src/models/: error.rs  mod.rs
crates/control_plane/src/repository/: mod.rs
crates/control_plane/src/sql/: error.rs  execution.rs  mod.rs  planner.rs  sql.rs
crates/core-history/: Cargo.toml
crates/core-history/src/: errors.rs  history_store.rs  interface.rs  lib.rs  recording_service.rs  slatedb_history_store.rs  sqlite_history_store.rs  store.rs
crates/core-history/src/entities/: mod.rs  query.rs  query_id.rs  query_id_param.rs  query_metrics.rs  result_set.rs  worksheet.rs  worksheet_query_ref.rs
crates/core-history/src/tests/: history.rs  mod.rs  resultset.rs  test_sqlite_via_conn.rs
crates/core-metastore/: Cargo.toml  README.md
crates/core-metastore/src/: basic_metastore.rs  config.rs  error.rs  interface.rs  lib.rs  list_parameters.rs  metastore.rs  sqlite_metastore.rs  tests.rs
crates/core-metastore/src/basic/: config.rs  metastore.rs  mod.rs
crates/core-metastore/src/models/: database.rs  mod.rs  schema.rs  table.rs  volumes.rs
crates/core-metastore/src/snapshots/: core_metastore__metastore__tests__create_s3table_volume.snap  core_metastore__metastore__tests__create_volumes.snap  core_metastore__tests__create_database.snap  core_metastore__tests__create_s3table_volume.snap  core_metastore__tests__create_volumes.snap  core_metastore__tests__delete_volume.snap  core_metastore__tests__schemas.snap  core_metastore__tests__tables.snap  core_metastore__tests__update_volume.snap
crates/core-metastore/src/sqlite/: diesel_gen.rs  mod.rs
crates/core-sqlite/: Cargo.toml  README.md
crates/core-sqlite/src/: error.rs  handle.rs  lib.rs  lock_manager.rs  sqlite_config.rs  vfs.rs
crates/core-sqlite/src/vfs/: handle.rs  init.rs  lock_manager.rs  mod.rs
crates/core-traits/: Cargo.toml
crates/core-traits/src/: executor.rs  history.rs  lib.rs  metastore.rs
crates/embucketd/: Cargo.toml  TRACING_AND_PROFILING.md  tracing.md
crates/embucketd/src/: cli.rs  error.rs  helpers.rs  layers.rs  main.rs  metastore_config.rs
crates/metastore/: Cargo.toml
crates/metastore/src/: error.rs  lib.rs  metastore.rs
crates/metastore/src/models/: database.rs  mod.rs  schema.rs  table.rs  volumes.rs
crates/metastore/src/snapshots/: embucket_metastore__metastore__tests__create_database.snap  embucket_metastore__metastore__tests__create_volumes.snap  embucket_metastore__metastore__tests__delete_volume.snap  embucket_metastore__metastore__tests__schemas.snap  embucket_metastore__metastore__tests__tables.snap  embucket_metastore__metastore__tests__update_volume.snap  metastore__metastore__tests__duplicate_volume.snap
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  lib.rs
crates/runtime/src/datafusion/: context.rs  error.rs  execution.rs  mod.rs  planner.rs  session.rs  statement_post_processor.rs
crates/runtime/src/execution/: catalog.rs  dedicated_executor.rs  error.rs  history.rs  mod.rs  query.rs  recording_service.rs  service.rs  session.rs  utils.rs
crates/runtime/src/http/: config.rs  error.rs  layers.rs  mod.rs  router.rs  session.rs  state.rs
crates/runtime/src/tests/: auth.rs  mod.rs  queries.rs  server.rs  session.rs  utils.rs
crates/runtime/src/web/: error.rs
crates/visitors/: Cargo.toml
crates/visitors/src/: copy_into_identifiers.rs  functions_rewriter.rs  json_element.rs  lib.rs
crates/visitors/src/variant/: array_agg.rs  array_construct.rs  array_construct_compact.rs
(+1576 files in other folders)
