[workspace]
default-members = ["bin/bucketd"]
members = [
  "bin/bucketd",
  "crates/metastore",
  "crates/history",
  "crates/runtime",
  "crates/utils",
]
resolver = "2"
package.license-file = "LICENSE"

[profile.test]
incremental = true
opt-level = 1
debug = true
codegen-units = 16

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
futures = { version = "0.3" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1.84" }
serde = { version = "1.0", features = ["derive"] }
slatedb = { version = "0.4.0" }
bytes = { version = "1.8.0" }
snmalloc-rs = { version = "0.3" }
object_store = { version = "0.12.0", features = ["aws", "gcp", "azure"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4.44"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1.0"
iceberg = { git = "https://github.com/hansetag/iceberg-rust.git", branch = "ct/builder-upstream-20241002" }
tempfile = { version = "3" }
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
lazy_static = { version = "1.5" }
snafu = { version = "0.8.5", features = ["futures"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-attributes = { version = "0.1.28" }
embucket_history = { version = "0.1.0", path = "crates/history" }

datafusion = { version = "47.0.0" }
datafusion-common = { version = "47.0.0" }
datafusion-expr = { version = "47.0.0" }
datafusion-physical-plan = { version = "47.0.0" }
datafusion-doc = { version = "47.0.0" }
datafusion-macros = { version = "47.0.0" }

datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "4a431bc89fb88731685609618799d392cb0a74e7" }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b7934f3a3915f4344b2d6f941bd4e7795c04949e" }
iceberg-rust-spec = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b7934f3a3915f4344b2d6f941bd4e7795c04949e" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b7934f3a3915f4344b2d6f941bd4e7795c04949e" }
iceberg-s3tables-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b7934f3a3915f4344b2d6f941bd4e7795c04949e" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b7934f3a3915f4344b2d6f941bd4e7795c04949e" }

[patch.crates-io]
datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }
datafusion-doc = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }
datafusion-macros = { git = "https://github.com/Embucket/datafusion.git", rev = "6f50fcbce4358cee8ec66b3e34fb97c3494eea37" }

# issue #309
chrono = { git = "https://github.com/chronotope/chrono.git", rev = "8b863490d88ba098038392c8aa930012ffd0c439" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }

# These should be removed eventually
missing_errors_doc = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
significant_drop_tightening = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
option_if_let_else = { level = "allow", priority = 2 }

