[package]
name = "api-client-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
api-structs = { path = "../api-structs", features = ["serde"] }

async-trait = { workspace = true }
http = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
