[package]
name = "api-seed"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
serde_yaml = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
core-metastore = { path = "../core-metastore" }
core-executor = { path = "../core-executor" }
fake = "4.3.0"
rand = "0.9.1"
