[package]
name = "api-seed"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
# api-ui = { path = "../api-ui" }
api-client-rest = { path = "../api-client-rest" }
api-structs = { path = "../api-structs", features = ["serde", "partial", "eq"] }

async-trait = { workspace = true }
http = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
fake = "4.3.0"
reqwest = { workspace = true }
rand = "0.9.1"
serde_json = { workspace = true }

[lints]
workspace = true
