[package]
name = "api-seed"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
api-client-rest = { path = "../api-client-rest" }
api-structs = { path = "../api-structs", features = ["serde", "partial", "eq"] }

async-trait = { workspace = true }
http = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
fake = { version = "4.3.0", features = ["chrono"] }
reqwest = { workspace = true }
rand = "0.9.1"
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
api-ui = { path = "../api-ui" }

[lints]
workspace = true
