[package]
name = "api-sessions"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-executor = { path = "../core-executor" }

async-trait = { workspace = true }
axum = { workspace = true }
tower-sessions = "0.14"
tokio = { workspace = true }
time = "0.3.37"
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
