[package]
name = "api-structs"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
schema = ["dep:utoipa"]
serde = ["dep:serde", "dep:serde_json"]
partial = []
eq = []

[dependencies]
core-metastore = { path = "../core-metastore" }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true }
utoipa = { workspace = true, optional = true }

[lints]
workspace = true
