[package]
name = "api-structs"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
schema = ["dep:utoipa"]
serde = [] # keep it simple instead of adding conditional deps ["dep:serde", "dep:serde_json"]
partial = []
eq = []

[dependencies]
core-metastore = { path = "../core-metastore" }

arrow = { version = "55.1.0" }
arrow-array = { version = "55.1.0" }

indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true, optional = true }
snafu = { workspace = true }

[lints]
workspace = true
