[package]
name = "core-history"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = ["sqlite"]
sqlite = []
utilsdb = []

[dependencies]
core-utils = { path = "../core-utils" }
core-sqlite = { path = "../core-sqlite" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
slatedb = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.37.0", features = ["blob", "trace", "bundled"] }


[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
