[package]
name = "core-sqlite"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
sqlite-plugin = { path = "../sqlite-plugin", features = ["static", "dynamic"] }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

log = { version = "=0.4.28", features = ["std"] }
parking_lot = "0.12.4"

rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
deadpool-sqlite = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
