[package]
name = "core-sqlite"
version = "0.1.0"
edition = "2024"
license-file = { workspace = true }

[dependencies]
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

log = { version = "=0.4.28", features = ["std"] }
parking_lot = "0.12.4"

rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
snafu = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
deadpool-sqlite = { workspace = true }
deadpool-diesel = { workspace = true }
deadpool = { workspace = true }
deadpool-sync = "0.1.4"
chrono = { workspace = true }
cfg-if = { workspace = true }

[lints]
workspace = true
