[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
object_store = { workspace = true }
tracing = { workspace = true}

datafusion = { git="https://github.com/Embucket/datafusion.git", rev = "155bc7347cf2866b67525c411d4a7089ddb8d67e" }
datafusion-common = { git="https://github.com/Embucket/datafusion.git", rev = "155bc7347cf2866b67525c411d4a7089ddb8d67e" }
datafusion-expr = { git="https://github.com/Embucket/datafusion.git", rev = "155bc7347cf2866b67525c411d4a7089ddb8d67e" }

iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b2ffc851ae4a8a6490cf6a293366884a499178c4" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b2ffc851ae4a8a6490cf6a293366884a499178c4" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "b2ffc851ae4a8a6490cf6a293366884a499178c4" }

arrow = { version = "53" }
arrow-json = { version = "53" }
arrow-schema = { version = "53.3.0", default-features = false }

datafusion-functions-json = { version = "0.44.0" }
sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "53c291e3e95f176daea954f614409e5f674ec561", features = ["visitor"] }
regex = { version = "1.11.0" }

paste = "1"
snafu = { workspace = true }
url = { version = "2.5.4" }

[lints]
workspace = true

[dev-dependencies]
insta = { version="1.42.0", features=["yaml"] }