[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = { version = "54.1.0" }
arrow-json = { version = "54.1.0" }
arrow-schema = { version = "54.1.0", default-features = false }
async-trait = { workspace = true }

chrono = { workspace = true }

datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "8c1bb903792f9c90fa0b1501180bba16cac361d8" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "8c1bb903792f9c90fa0b1501180bba16cac361d8" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "8c1bb903792f9c90fa0b1501180bba16cac361d8" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "8c1bb903792f9c90fa0b1501180bba16cac361d8" }

datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "1cbcd2bffa2c5b56add996859d02053fd4bc21fc" }

iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "26b014d1fa6c0ffa33e4a7bfcc5db130e3cc6bc5" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "26b014d1fa6c0ffa33e4a7bfcc5db130e3cc6bc5" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "26b014d1fa6c0ffa33e4a7bfcc5db130e3cc6bc5" }

futures = { workspace = true }
object_store = { workspace = true }

paste = "1"
regex = { version = "1.11.0" }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }

sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "53c291e3e95f176daea954f614409e5f674ec561", features = [
  "visitor",
] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { version = "2.5.4" }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
